# JobSearch

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: config.py
src/: api.py  data_loader.py  db_manager.py
